# bee-revenue

./: .gitignore  CLAUDE.md  README.md  plan.md  setup.sh  updates.md
bee-content/automation/: README.md  pyproject.toml
bee-content/automation/recipes/: README.md  map-visuals-guide.md  subtitle-generation-guide.md  video-production-recipes.md
bee-content/automation/research/: cli-video-production-tools.md  faceless-ai-channel-cost-breakdown-workflows.md  oss-audio-speech-tools.md  oss-image-map-graphics-tools.md  oss-video-compositing-tools.md
bee-content/automation/src/bee_content_automation/: __init__.py  cli.py  models.py
bee-content/automation/src/bee_content_automation/scripts/: __init__.py  generator.py
bee-content/automation/tests/: test_sources.py
bee-content/research/: CLAUDE.md  pyproject.toml
bee-content/research/research/: youtube-content-research-analytics-tools.md  youtube-screenplay-analysis-ai-scriptwriting.md
bee-content/research/src/bee_content_research/: __init__.py  formatters.py
bee-content/research/tests/: test_analyzers.py  test_fetchers_channel.py  test_fetchers_search.py  test_fetchers_transcript.py  test_fetchers_video.py  test_integration.py  test_review.py  test_storage.py
bee-content/video-editor/: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  dev.sh  package-lock.json  pyproject.toml  setup.sh  start.sh  test-new-components.md  test.sh
bee-content/video-editor/docs/: SCREENSHOT-CHECKLIST.md
bee-content/video-editor/docs/reference/: dr-insanity-video-audit-plan.md  dr-insanity-visual-effects-audit.md
bee-content/video-editor/docs/research/: 2026-03-20-nle-timeline-research.md
bee-content/video-editor/docs/superpowers/: TIMELINE-FEATURES.md  TIMELINE-ISSUES.md
bee-content/video-editor/scripts/: capture-screenshots.mjs
bee-content/video-editor/src/bee_video_editor/: __init__.py  converters.py  log_config.py  models.py  models_storyboard.py
bee-content/video-editor/tests/: test_acquisition.py  test_ai_video.py  test_api.py  test_batch_graphics.py  test_captions.py  test_cli_import_export.py  test_compositor.py  test_converters.py  test_dub_compose.py  test_dub_diarize.py  test_dub_download.py  test_dub_models.py  test_dub_pipeline.py  test_dub_separate.py  test_dub_status.py  test_dub_transcribe.py  test_dub_translate.py  test_dub_tts.py  test_dub_voices.py  test_ffmpeg_effects.py  test_format_migrate.py  test_format_models.py  test_format_parser.py  test_format_roundtrip.py  test_format_writer.py  test_graphics.py  test_log_config.py  test_lottie_overlays.py  test_maps.py  test_matcher.py  test_media_search.py  test_models.py  test_otio_clean.py  test_otio_convert.py  test_otio_export.py  test_parser.py  test_preflight.py  test_production.py  test_rough_cut.py  test_scene_detect.py  (+11 more)
bee-content/video-editor/tests/fixtures/: storyboard_v2_full.md  storyboard_v2_full.otio  storyboard_v2_minimal.md
bee-content/video-editor/web/: dev.sh  package-lock.json  package.json  playwright.config.ts  render.mjs  start.sh  tailwind.config.js  vite.config.ts
bee-content/video-editor/web/e2e/: editor.spec.ts
bee-content/video-editor/web/server/: index.ts  tsconfig.json
bee-content/video-editor/web/shared/: storyboard-parser.test.ts  storyboard-parser.ts  transform.ts  tsconfig.json  types.ts
bee-content/video-editor/web/src/: App.tsx  SPIKE-NOTES.md  index.css  remotion-entry.tsx
(+465 files in other folders)
