[project]
name = "bee-content-automation"
version = "0.1.0"
description = "Automated anime/manga/manhwa YouTube content pipeline"
readme = "README.md"
authors = [
    { name = "Bamboo Bee", email = "bamboobee.oc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bee-auto = "bee_content_automation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]
llm = ["anthropic>=0.40.0"]
