[project]
name = "bee-content-research"
version = "0.1.0"
description = "YouTube competitor analysis CLI + MCP server"
readme = "README.md"
authors = [
    { name = "Bamboo Bee", email = "bamboobee.oc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "yt-dlp>=2024.0.0",
    "scrapetube>=2.5.0",
    "youtube-transcript-api>=1.0.0",
]

[project.scripts]
bee-research = "bee_content_research.adapters.cli:app"
bee-research-mcp = "bee_content_research.adapters.mcp_adapter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
mcp = ["mcp>=1.0.0"]
