[project]
name = "bee-video-editor"
version = "0.9.0"
description = "AI-assisted video production tool — assembly guide to final video"
readme = "README.md"
authors = [
    { name = "Bamboo Bee", email = "bamboobee.oc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "edge-tts>=6.1.0",
    "pysubs2>=1.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "opentimelineio>=0.17.0",
]

[project.scripts]
bee-video = "bee_video_editor.adapters.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "python-multipart>=0.0.9"]
tts-kokoro = ["kokoro>=0.9.4", "soundfile"]
tts-openai = ["openai"]
tts-elevenlabs = ["elevenlabs"]
captions-precise = ["openai-whisper"]
animation = ["lottie>=0.7.0"]
maps = ["py-staticmaps>=0.4.0"]
